--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<link href="https://fonts.googlrleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="https://adiiiiiios.github.io/welcome/hankxStyle.css">
+	<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
 <div class="container d-flex align-items-center h-100">
@@ -16,7 +16,7 @@
 		<header class="text-center col-12">
 <h1><strong>THE BIGGEST STARTUP EVENT OF THE YEAR</strong></h1>
 </header>
-<hr>
+
 <div class="buffer col-12"></div>
 <section class="text-center col-12">
 	<a href="https://mailchi.mp/3ff21a3ca2cc/startup">
